@@ -1,3 +1,12 @@
+2009-11-04  Gavin Barraclough  <barraclough@apple.com>
+
+        Rubber Stamped by Mark Rowe, Oliver Hunt, and Sam Weinig.
+
+        Add a missing assert to the ARMv7 JIT.
+
+        * assembler/ARMv7Assembler.h:
+        (JSC::ARMThumbImmediate::ARMThumbImmediate):
+
 2009-11-04  Mark Rowe  <mrowe@apple.com>
 
         Rubber-stamped by Oliver Hunt.
